Adding simulation API
